--- a/css_dark.css
+++ b/css_dark.css
@@ -1,7 +1,3 @@
-html.better-slp-dark-mode-transitioning * {
-  transition: all 300ms !important;
-}
-
 html {
   color-scheme: dark;
 }
@@ -309,4 +305,16 @@ html .drop-shadow {
 }
 html .courserow-details-course h3 {
   color: hsl(0deg, 0%, 26%) !important;
+}
+html .audience badge {
+  background-color: hsl(0deg, 0%, 14%) !important;
+}
+html .pull-left h2 {
+  color: hsl(0deg, 0%, 68%) !important;
+}
+html .activity-feed-date h4 {
+  color: hsl(0deg, 0%, 68%) !important;
+}
+html .course-name {
+  color: hsl(0deg, 0%, 68%) !important;
 }/*# sourceMappingURL=css_dark.css.map */
