--- a/css_dark.scss
+++ b/css_dark.scss
@@ -1,9 +1,6 @@
 @import "css_variables";
 
 // Fade effect when dark mode is toggled
-html.better-slp-dark-mode-transitioning * {
-  transition: all 300ms !important;
-}
 
 // Dark mode stles
 html {
@@ -391,6 +388,19 @@ html {
     }
     .courserow-details-course h3{
       color: $dark-50 !important;
+    }
+
+    .audience badge{
+      background-color: $dark-700 !important;
+    }
+    .pull-left h2{
+      color: $light-800 !important;
+    }
+    .activity-feed-date h4{
+      color: $light-800 !important;
+    }
+    .course-name{
+      color: $light-800 !important;
     }
   }
 
