--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -277,8 +277,30 @@ $blue-grey-dark2: #455a64;
 $blue-grey-dark3: #37474f;
 $blue-grey-dark4: #263238;
 
-// ! Black and White
-$black: #000000;
-$white: #ffffff;
+// ! Black Colors
+$dark-blk: hsl(0, 0%, 0%);
+$dark-900: hsl(0, 0%, 7%);
+$dark-800: hsl(0, 0%, 11%);
+$dark-700: hsl(0, 0%, 14%);
+$dark-600: hsl(0, 0%, 15%);
+$dark-500: hsl(0, 0%, 17%);
+$dark-400: hsl(0, 0%, 18%);
+$dark-300: hsl(0, 0%, 20%);
+$dark-200: hsl(0, 0%, 21%);
+$dark-100: hsl(0, 0%, 22%);
+$dark-50 : hsl(0, 0%, 26%);
+$dark-25 : hsl(0, 0%, 36%);
+
+// ! White Colors
+$light-900: hsl(0, 0%, 56%);
+$light-800: hsl(0, 0%, 68%);
+$light-700: hsl(0, 0%, 74%);
+$light-600: hsl(0, 0%, 82%);
+$light-500: hsl(0, 0%, 88%);
+$light-400: hsl(0, 0%, 90%);
+$light-300: hsl(0, 0%, 93%);
+$light-200: hsl(0, 0%, 96%);
+$light-100: hsl(0, 0%, 98%);
+$light-0:   hsl(0, 0%, 100%);
 
 
