--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -247,6 +247,7 @@
     $checkin-flyout-dismiss: ".mentor-checkin-footer-buttons .btn-default";
     $checkin-flyout-textarea: ".app .mentor-checkin-prework-flow textarea.form-control";
     $checkin-flyout-subtitle: ".mentor-checkin-body .subtitle";
+    $summit-reads-solves-dropdown: ".summit-reads-solves dropdown open";
 
     //? BetterSLP elements
     $bslp-note-taker-embed: ".better-slp-note-taker-embed";
