--- a/dark-mode.scss
+++ b/dark-mode.scss
@@ -1,7 +1,7 @@
 @import "scss/abstracts/colors", "scss/abstracts/variables";
 
-body[data-url="year"] {
+/* body[data-url="year"] {
     .panel-body {
         // Styles here
     }
-}
+} */
